--- a/project/src/main/resources/templates/createAccount.html
+++ b/project/src/main/resources/templates/createAccount.html
@@ -37,6 +37,7 @@
                 </ul>
                 <!-- fieldsets -->
                 <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
                         <label for="position-role">Chức vụ <span class="text-red">*</span></label>
                         <select class="form-control" id="position-role" onchange="changeSelected()">
@@ -53,6 +54,7 @@
                     <input type="button" id="next" class="next action-button" value="TIẾP"/>
                 </fieldset>
                 <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left username">
                         <label for="username">Tên đăng nhập <span class="text-red">*</span></label>
                         <input type="text" class="form-control" id="username" placeholder="anv">
@@ -93,7 +95,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/1ABC9C/ok--v1.png"/>
+                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
                 <h5>Tạo tài khoản thành công!</h5>
             </div>
             <div class="modal-footer">
