--- a/project/src/main/resources/templates/createGifftedClass.html
+++ b/project/src/main/resources/templates/createGifftedClass.html
@@ -30,6 +30,7 @@
                 <h2 class="fs-title">Thêm hệ chuyên</h2>
                 <h3 class="fs-subtitle">Điền thông tin vào các trường để thêm hệ chuyên mới</h3>
                 <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
                         <label for="giftedClassName">Hệ chuyên <span class="text-red">*</span></label>
                         <input type="text" class="form-control" id="giftedClassName" placeholder="Toán">
