--- a/project/src/main/resources/templates/createTeacher.html
+++ b/project/src/main/resources/templates/createTeacher.html
@@ -30,6 +30,7 @@
                 <h2 class="fs-title">Thêm giáo viên</h2>
                 <h3 class="fs-subtitle">Điền thông tin vào các trường để thêm giáo viên mới</h3>
                 <fieldset>
+                    <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
                         <label for="fullName">Họ và tên <span class="text-red">*</span></label>
                         <input type="text" class="form-control" id="fullName" placeholder="Nguyễn văn A">
@@ -58,7 +59,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/1ABC9C/ok--v1.png"/>
+                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
                 <h5>Thêm giáo viên thành công!</h5>
             </div>
             <div class="modal-footer">
