--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -72,6 +72,13 @@
                 </a>
             </div>
         </div>
+        <div class="table-title-2">
+            <div class="col-sm-6 table-title-note">
+                <b>Chú thích: </b>
+                <span class="status-active"><i class="fa fa-circle" aria-hidden="true"></i></span> Hoạt động |
+                <span class="status-deactive"><i class="fa fa-circle" aria-hidden="true"></i></span> Khóa
+            </div>
+        </div>
         <table class="table table-hover">
             <thead>
             <tr class="align-items-center">
