--- a/project/src/main/resources/templates/editClass.html
+++ b/project/src/main/resources/templates/editClass.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-check">
                         <div class="form-check-label">
-                            <input type="radio" class="form-check-input" value="1" name="optradio">Không hoạt động
+                            <input type="radio" class="form-check-input" value="1" name="optradio">Khóa
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,6 @@
             <div class="error classInfo-err"></div>
             <div class="text-center">
                 <button type="button" class="btn btn-customer" id="editInfo">CHỈNH SỬA</button>
-                <button type="button" class="btn btn-customer hide" id="confirmEdit">XONG</button>
             </div>
         </div>
     </div>
@@ -69,11 +68,11 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/1ABC9C/ok--v1.png"/>
+                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
                 <h5>Thông tin sửa thành công!</h5>
             </div>
             <div class="modal-footer">
-                <a type="button" class="btn btn-primary" th:href="@{editClass}">ĐÓNG</a>
+                <a type="button" class="btn btn-primary" th:href="@{manageClass}">ĐÓNG</a>
             </div>
         </div>
     </div>
