02/07: fix bug template

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -127,7 +127,7 @@ a:hover {
 }
 
 /*hide navbar*/
-#admin, #schedule-manager, #loginSuccess-menu {
+#adminMenu, #scheduleManagerMenu, #loginSuccessMenu {
     display: none;
 }
 
