--- a/project/src/main/resources/templates/createAccount.html
+++ b/project/src/main/resources/templates/createAccount.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="error createAccount-err text-left"></div>
-                    <input type="button" id="previous" class="previous action-button-previous" value="Previous"/>
+                    <input type="button" id="previous" class="previous action-button-previous" value="QUAY LẠI"/>
                     <input type="button" name="submit" id="submit" class="submit action-button" value="TẠO"/>
                 </fieldset>
             </form>
