--- a/project/src/main/resources/templates/createClass.html
+++ b/project/src/main/resources/templates/createClass.html
@@ -75,7 +75,7 @@
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <a type="button" id="closeDialog" class="btn btn-primary" th:href="@{createClass}">ĐÓNG</a>
+                <input type="button" id="closeDialog" class="btn btn-primary" value="ĐÓNG"/>
             </div>
         </div>
     </div>
