--- a/project/src/main/resources/templates/createGifftedClass.html
+++ b/project/src/main/resources/templates/createGifftedClass.html
@@ -49,7 +49,7 @@
             <div class="modal-body text-center">
             </div>
             <div class="modal-footer">
-                <a type="button" class="btn btn-customer" th:href="@{createClass}">Tạo lớp</a>
+                <a type="button" class="btn btn-customer" th:href="@{createClass}">TẠO LỚP</a>
                 <a type="button" class="btn btn-primary" th:href="@{createGifftedClass}">ĐÓNG</a>
             </div>
         </div>
