--- a/project/src/main/resources/templates/timetableClass.html
+++ b/project/src/main/resources/templates/timetableClass.html
@@ -29,7 +29,7 @@
                     <div class="search-line">
                         <span>Niên khóa</span>
                         <select class="combobox searchable" id="year">
-                            <option value="0" selected="selected">---Chọn niên khóa---</option>
+                            <option value="0" selected="selected">---Chọn năm học---</option>
                             <option value="1">2020 - 2021</option>
                         </select>
                     </div>
