--- a/project/src/main/resources/templates/changePassword.html
+++ b/project/src/main/resources/templates/changePassword.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="text-red changePassword-err error"></div>
                 <div class="form-group form-button">
-                    <input type="submit" name="confirm" id="confirm" class="form-submit" value="Xác nhận"/>
+                    <input type="submit" name="confirm" id="confirm" class="form-submit" value="XÁC NHẬN"/>
                 </div>
             </form>
         </div>
