--- a/project/src/main/resources/templates/createTeacher.html
+++ b/project/src/main/resources/templates/createTeacher.html
@@ -32,7 +32,7 @@
                 <fieldset>
                     <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
-                        <label for="fullName">Họ và tên <span class="text-red">*</span></label>
+                        <label for="fullName">Họ và tên</label>
                         <input type="text" class="form-control" id="fullName" placeholder="Nguyễn văn A">
                     </div>
                     <div class="form-group text-left">
