--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -70,11 +70,11 @@
                             <a href="#" class="dropdown-item" th:href="@{timetableClass}">Thời khóa biểu của lớp</a>
                             <a href="#" class="dropdown-item" th:href="@{timetableTeacher}">Thời khóa biểu của giáo
                                 viên</a>
-                            <a href="#" class="dropdown-item" id="schedule-manager" th:href="@{manageTimetable}">Quản lý
+                            <a href="#" class="dropdown-item" id="scheduleManagerMenu" th:href="@{manageTimetable}">Quản lý
                                 thời khóa biểu</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown" id="admin">
+                    <li class="nav-item dropdown" id="adminMenu">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">QUẢN LÝ</a>
                         <div class="dropdown-menu">
                             <a href="#" class="dropdown-item" th:href="@{manageAccount}">Quản lý tài khoản</a>
@@ -85,10 +85,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">LIÊN HỆ</a>
                     </li>
-                    <li class="nav-item" id="login">
+                    <li class="nav-item" id="loginMenu">
                         <a class="btn btn-outline btn-login" th:href="@{login}">ĐĂNG NHẬP</a>
                     </li>
-                    <li class="nav-item dropdown" id="loginSuccess-menu">
+                    <li class="nav-item dropdown" id="loginSuccessMenu">
                         <button class="btn btn-outline btn-login p-1">
                             <img src="https://img.icons8.com/material-rounded/30/FFFFFF/person-male.png"/>
                         </button>
