--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="error login-err"></div>
                 <div class="form-group form-button">
-                    <input type="button" name="signin" id="signin" class="form-submit" value="Đăng nhập"/>
+                    <input type="button" name="signin" id="signin" class="form-submit" value="ĐĂNG NHẬP"/>
                 </div>
                 <div class="form-group text-center">
                     <a th:href="@{forgotPassword}">Quên mật khẩu?</a>
@@ -65,7 +65,7 @@
                     <h5>Đăng nhập thành công!</h5>
                 </div>
                 <div class="modal-footer">
-                    <a type="button" class="btn btn-primary" th:href="@{/}">Xác nhận</a>
+                    <a type="button" class="btn btn-primary" th:href="@{/}">XÁC NHẬN</a>
                 </div>
             </div>
         </div>
