create deleteGifftedClass template

--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -40,6 +40,7 @@
     <div><a th:href="@{createClass}">Thêm lớp</a></div>
     <div><a th:href="@{editClass}">Sửa thông tin lớp</a></div>
     <div><a th:href="@{createGifftedClass}">Thêm hệ chuyên</a></div>
+    <div><a th:href="@{deleteGifftedClass}">Xóa hệ chuyên</a></div>
     <br>
     <h2>Module 4: Thời khóa biểu</h2>
     <div><a th:href="@{timetableClass}">Thời khóa biểu của lớp</a></div>
