kimpt142 commit fix edit class fe 3/7

--- a/project/src/main/resources/templates/editClass.html
+++ b/project/src/main/resources/templates/editClass.html
@@ -63,6 +63,20 @@
     </div>
 </div>
 
+<!-- Confirm edit Modal HTML -->
+<div id="confirmEditModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+            </div>
+            <div class="modal-footer">
+                <input type="submit" class="btn btn-danger" id="editClassModal" data-dismiss="modal" value="CÓ">
+                <input type="button" class="btn btn-primary" id="closeModal" value="KHÔNG">
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--    Modal Edit Information Success-->
 <div class="modal" tabindex="-1" role="dialog" id="editInfoSuccess">
     <div class="modal-dialog" role="document">
