--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -44,6 +44,7 @@
     <br>
     <h2>Module 4: Thời khóa biểu</h2>
     <div><a th:href="@{timetableClass}">Thời khóa biểu của lớp</a></div>
+    <div><a th:href="@{manageTimetable}">Quản lý thời khóa biểu</a></div>
     <br>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
