--- a/project/src/main/resources/templates/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher.html
@@ -119,6 +119,7 @@
 
 <div class="modal-loading"></div>
 <div th:replace="fragments/footer :: footer"></div>
-<script type="text/javascript" th:src="@{/js/manageTeacher.js}"></script>
+<!--<script type="text/javascript" th:src="@{/js/manageTeacher.js}"></script>-->
+<script type="text/javascript" th:src="@{/js/manageTable.js}"></script>
 </body>
 </html>
