kimpt142 commit fix front-end 3/7

--- a/project/src/main/resources/templates/userInformation.html
+++ b/project/src/main/resources/templates/userInformation.html
@@ -29,22 +29,22 @@
         <hr>
         <div class="info-des col-xl-10 mx-auto">
             <div class="input-info">
-                <label for="fullName">Họ và tên</label>
-                <input class="basic-slide" id="fullName" type="text" value="" disabled/>
+                <label for="username">Tên đăng nhập</label>
+                <input class="basic-slide" id="username" type="text" value="" disabled/>
             </div>
             <div class="input-info">
                 <label for="roleName">Chức vụ</label>
                 <input class="basic-slide" id="roleName" type="text" value="" disabled/>
             </div>
-            <div class="input-info">
-                <label for="username">Tên đăng nhập</label>
-                <input class="basic-slide" id="username" type="text" value="" disabled/>
+            <div class="input-info" id="fullNameDiv">
+                <label for="fullName">Họ và tên</label>
+                <input class="basic-slide" id="fullName" type="text" value="" disabled/>
             </div>
-            <div class="input-info">
+            <div class="input-info" id="phoneDiv">
                 <label for="phone">SĐT</label>
                 <input class="basic-slide" id="phone" type="text" value="" disabled/>
             </div>
-            <div class="input-info">
+            <div class="input-info" id="emailDiv">
                 <label for="email">Email</label>
                 <input class="basic-slide" id="email" type="text" value="" disabled/>
             </div>
