--- a/project/src/main/resources/templates/deleteGifftedClass.html
+++ b/project/src/main/resources/templates/deleteGifftedClass.html
@@ -32,21 +32,20 @@
                     <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
                     <div class="form-group text-left">
                         <label for="gifftedClass">Hệ chuyên <span class="text-red">*</span></label>
-                        <select class="form-control" id="gifftedClass">
+                        <select class="form-control" id="gifftedClass" onchange="changeSelected()">
                             <option value="0" selected>-- Chọn hệ chuyên ---</option>
                         </select>
                     </div>
                     <div class="error giftedClass-err text-left"></div>
-                    <a href="#deleteGifftedClassModal" class="btn btn-customer" data-toggle="modal">
-                        <span>Xóa</span>
-                    </a>
+                    <input type="button" class="btn btn-customer" value="XÓA" id="deleteGC"
+                           data-toggle="modal" data-target=""/>
                 </fieldset>
             </form>
         </div>
     </div>
 </div>
 <!-- Delete Modal HTML -->
-<div id="deleteGifftedClassModal" class="modal fade">
+<div id="deleteGifftedClassModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body text-center">
@@ -74,6 +73,7 @@
             </div>
             <div class="modal-footer">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                <a type="button" href="deleteGifftedClass" class="btn btn-primary hide">ĐÓNG</a>
             </div>
         </div>
     </div>
