Add combobox status for manageClass page

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -916,6 +916,10 @@ fieldset .note {
     font-size: 20px;
 }
 
+.timetable .session p {
+    transform: rotate(-90deg);
+}
+
 .timetable .slot {
     font-weight: 700;
 }
