--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -59,6 +59,14 @@
                             <option value="1" selected="selected">Tăng dần</option>
                         </select>
                     </div>
+                    <div class="search-line">
+                        <span>Trạng thái</span>
+                        <select class="combobox searchable" id="status">
+                            <option value="0" selected="selected">Tất cả</option>
+                            <option value="1">Hoạt động</option>
+                            <option value="2">Khóa</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="d-inline-block ml-2">
                     <button class="btn btn-search" id="search">Tìm kiếm</button>
