Update combobox status for manageClass page

--- a/project/src/main/resources/templates/manageClass.html
+++ b/project/src/main/resources/templates/manageClass.html
@@ -62,9 +62,9 @@
                     <div class="search-line">
                         <span>Trạng thái</span>
                         <select class="combobox searchable" id="status">
-                            <option value="0" selected="selected">Tất cả</option>
-                            <option value="1">Hoạt động</option>
-                            <option value="2">Khóa</option>
+                            <option value="" selected="selected">Tất cả</option>
+                            <option value="0">Hoạt động</option>
+                            <option value="1">Khóa</option>
                         </select>
                     </div>
                 </div>
