demo get list week

--- a/project/src/main/resources/templates/manageTimetable.html
+++ b/project/src/main/resources/templates/manageTimetable.html
@@ -49,6 +49,10 @@
             </div>
         </div>
     </div>
+<!--tao demo ra đây loan nhé-->
+    <tbody th:each="week : ${listWeek}">
+       <p th:text="${week.fromDate}"></p>
+    </tbody>
 
 </div>
 <div th:replace="fragments/footer :: footer"></div>
