Fix bug 01/07/2020: - Thanh search trang manageClass - Disable nút chỉnh sửa khi ko có ID - Đổi phân trang + gộp function - Chỉnh giao diện timetable + định dạng lại tuần + lấy defaul IDCurrent - Bảng insert vào bị sai (bị null, ghi đè)

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -898,6 +898,10 @@ fieldset .note {
     margin-top: 30px;
 }
 
+.table-err {
+    width: 100%;
+}
+
 .timetable, .timetable tr, .timetable td {
     height: 50px;
     border: 1px solid #456c83;
@@ -952,6 +956,12 @@ fieldset .note {
 .afternoon .week {
     font-weight: 500;
     background: #c2e9fe;
+}
+
+@media screen and (max-width: 600px) {
+    .timetable {
+        font-size: 13px;
+    }
 }
 
 /*END Timetable*/
