--- a/project/src/main/resources/templates/timetableClass.html
+++ b/project/src/main/resources/templates/timetableClass.html
@@ -53,8 +53,8 @@
         <table class="timetable table-bordered">
             <thead>
             <tr class="timtable-title">
-                <th colspan="2">Buổi</th>
-                <th>Tiết</th>
+                <th colspan="2" style="width: 15%">Buổi</th>
+                <th style="width: 10%">Tiết</th>
                 <th>Thứ 2</th>
                 <th>Thứ 3</th>
                 <th>Thứ 4</th>
@@ -67,90 +67,91 @@
             <tr class="morning">
                 <td rowspan="5" colspan="2" class="session"><p>SÁNG</p></td>
                 <td class="slot">1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="morning">
                 <td class="slot">2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="morning">
                 <td class="slot">3</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="morning">
                 <td class="slot">4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="morning">
                 <td class="slot">5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="afternoon">
                 <td rowspan="4" class="session"><p>CHIỀU</p></td>
                 <td rowspan="2" class="week">(Tuần chẵn)</td>
                 <td class="slot">1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="afternoon">
                 <td class="slot">2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="afternoon isOdd">
                 <td rowspan="2" class="week">(Tuần lẻ)</td>
                 <td class="slot">1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             <tr class="afternoon isOdd">
                 <td class="slot">2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
+                <td class="data"></td>
             </tr>
             </tbody>
-
+        </table>
+        <table class="table-err table-bordered hide">
         </table>
     </div>
 </div>
