--- a/project/src/main/resources/templates/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher.html
@@ -64,7 +64,7 @@
                         <label for="selectAll"></label>
                     </span>
                 </th>
-                <th>Họ và tên</th>
+                <th>Giáo viên</th>
                 <th>Tên định danh</th>
                 <th>SĐT</th>
                 <th>Email</th>
