--- a/project/src/main/resources/templates/userInformation.html
+++ b/project/src/main/resources/templates/userInformation.html
@@ -48,7 +48,7 @@
                 <label for="email">Email</label>
                 <input class="basic-slide" id="email" type="text" value="" disabled/>
             </div>
-            <div class="input-info">
+            <div class="input-info" id="classDiv">
                 <label for="className">Lớp</label>
                 <input class="basic-slide" id="className" type="text" value="" disabled/>
             </div>
