--- a/project/src/main/resources/templates/manageTimetable.html
+++ b/project/src/main/resources/templates/manageTimetable.html
@@ -29,12 +29,13 @@
                 <fieldset>
                     <form th:action="@{/manageTimetable}" method="post" enctype="multipart/form-data" class="form">
                         <p class="note">(<span class="text-red">*</span>) Bắt buộc </p>
-                        <div class="form-group row text-left" >
+                        <div class="form-group row text-left">
                             <label for="date-input" class="col-4 col-form-label">Ngày áp dụng <span
                                     class="text-red">*</span></label>
-                            <div class="col-8" >
+                            <div class="col-8">
                                 <select class="form-control" id="date-input">
-                                    <option th:each="week : ${listWeek}"><span th:text="${week.fromDate}"></span></option>
+                                    <option th:each="week : ${listWeek}"><span th:text="${week.fromDate}"></span>
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -45,9 +46,46 @@
                             <small id="fileHelp" class="form-text text-muted">Hỗ trợ định dạng XLSX, XLS.</small>
                         </div>
                         <div class="error input-err text-left"><span th:text="${message}"></span></div>
-                        <input th:type="submit" class="btn btn-customer" value="THAY ĐỔI THỜI KHÓA BIỂU"/>
+                        <input th:type="submit" class="btn btn-customer" value="THAY ĐỔI THỜI KHÓA BIỂU" data-toggle="modal" data-target="#overrideTimetableModal"/>
                     </form>
                 </fieldset>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Override Modal HTML -->
+<div id="overrideTimetableModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form>
+                <div class="modal-body text-center">
+                    <h5>Ngày áp dụng của Thời khóa biểu đã tồn tại.</h5>
+                    <h5>Thời khóa biểu này sẽ bị ghi đè lên thời khóa biểu trước đó.</h5>
+                    <h5>Bạn có muốn ghi đè không?</h5>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#overrideSuccess"
+                           id="overrideTimetable" data-dismiss="modal" value="CÓ">
+                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--    Modal Override Success-->
+<div class="modal fade" tabindex="-1" role="dialog" id="overrideSuccess">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <img class="mb-3 mt-3 img-success" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
+                <img class="mb-3 mt-3 img-fail hide" src="https://img.icons8.com/flat_round/100/000000/error--v1.png"/>
+<!--                <h5 id="message-delete">Thay đổi Thời khóa biểu thành công!</h5>-->
+                <h5 id="message-delete">Ghi đè Thời khóa biểu thành công!</h5>
+            </div>
+            <div class="modal-footer">
+                <a type="button" class="btn btn-primary" th:href="@{manageTimetable}">ĐÓNG</a>
             </div>
         </div>
     </div>
