--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -47,6 +47,18 @@
     <div><a th:href="@{timetableTeacher}">Thời khóa biểu của giáo viên</a></div>
     <div><a th:href="@{manageTimetable}">Quản lý thời khóa biểu</a></div>
     <br>
+    <h2>Module 5: Quản lý lỗi</h2>
+    <div><a th:href="@{violationList}">Danh sách lỗi vi phạm</a></div>
+    <div><a th:href="@{editViolation}">Chỉnh sửa thông tin lỗi vi phạm</a></div>
+    <div><a th:href="@{addViolation}">Thêm thông tin lỗi vi phạm</a></div>
+    <div><a th:href="@{editViolationType}">Chỉnh sửa thông tin nội quy</a></div>
+    <div><a th:href="@{addViolationType}">Thêm thông tin nội quy</a></div>
+    <br>
+    <h2>Module 6: Quản lý năm học</h2>
+    <div><a th:href="@{schoolYearList}">Quản lý năm học</a></div>
+    <div><a th:href="@{addSchoolYear}">Thêm năm học mới</a></div>
+    <div><a th:href="@{editSchoolYear}">Sửa thông tin năm học</a></div>
+    <br>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
