Sửa giao diện violationList

--- a/project/src/main/resources/templates/violationList.html
+++ b/project/src/main/resources/templates/violationList.html
@@ -39,19 +39,17 @@
         <table class="table table-hover">
             <thead>
             <tr class="align-items-center">
-                <th class="text-center">STT</th>
-                <th class="text-center">Nội quy theo dõi</th>
-                <th class="text-center">Điểm</th>
-                <th class="text-center">Chỉnh sửa</th>
-                <th class="text-center"></th>
+                <th colspan="2">Nội quy theo dõi</th>
+                <th class="text-left">Điểm</th>
+                <th></th>
+                <th></th>
             </tr>
             </thead>
             <tbody class="panel panel-default">
             <tr class="panel-heading" data-toggle="collapse" data-target="#collapseOne">
-                <td class="text-center">1</td>
-                <td class="text-center">15 phút truy bài đầu giờ</td>
-                <td class="text-center">3</td>
-                <td class="text-center">
+                <td colspan="2">15 phút truy bài đầu giờ</td>
+                <td class="text-left">3</td>
+                <td>
                     <span class="bt-table-field">
                         <a href="#" class="bt-table-edit" title="Sửa">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
@@ -64,16 +62,16 @@
             </tr>
             <tr>
                 <td colspan="5" class="panel-collapse">
-                    <table class="table text-center my-0 collapse in" id="collapseOne">
+                    <table class="table my-0 collapse in" id="collapseOne">
                         <thead>
-                        <th>STT</th>
+                        <th style="width: 10%"></th>
                         <th>Vi phạm</th>
                         <th>Điểm trừ</th>
-                        <th>Hành động</th>
+                        <th></th>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>1</td>
+                            <th style="width: 10%"></th>
                             <td>
                                 Đi lại lộn xộn, làm việc riêng, ăn quà
                             </td>
@@ -88,7 +86,7 @@
                             </span></td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <th style="width: 10%"></th>
                             <td>
                                 Mỗi ĐVTN không hát quốc ca, tập trung muộn
                             </td>
@@ -103,7 +101,7 @@
                             </span></td>
                         </tr>
                         <tr>
-                            <td>3</td>
+                            <th style="width: 10%"></th>
                             <td>
                                 Mở cửa lớp muộn
                             </td>
@@ -122,154 +120,6 @@
                 </td>
             </tr>
 
-            <tr class="panel-heading" data-toggle="collapse" data-target="#collapseTwo">
-                <td class="text-center">2</td>
-                <td class="text-center">15 phút truy bài đầu giờ</td>
-                <td class="text-center">3</td>
-                <td class="text-center">
-                    <span class="bt-table-field">
-                        <a href="#" class="bt-table-edit" title="Sửa">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                        </a>
-                    </span>
-                </td>
-                <td>
-                    <button><i class="fa fa-chevron-down rotate"></i></button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="5" class="panel-collapse">
-                    <table class="table text-center my-0 collapse in" id="collapseTwo">
-                        <thead>
-                        <th>STT</th>
-                        <th>Vi phạm</th>
-                        <th>Điểm trừ</th>
-                        <th>Hành động</th>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>
-                                Đi lại lộn xộn, làm việc riêng, ăn quà
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>
-                                Mỗi ĐVTN không hát quốc ca, tập trung muộn
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>
-                                Mở cửa lớp muộn
-                            </td>
-                            <td>1</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <tr class="panel-heading" data-toggle="collapse" data-target="#collapseThree">
-                <td class="text-center">3</td>
-                <td class="text-center">15 phút truy bài đầu giờ</td>
-                <td class="text-center">3</td>
-                <td class="text-center">
-                    <span class="bt-table-field">
-                        <a href="#" class="bt-table-edit" title="Sửa">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                        </a>
-                    </span>
-                </td>
-                <td>
-                    <button><i class="fa fa-chevron-down rotate"></i></button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="5" class="panel-collapse">
-                    <table class="table text-center my-0 collapse in" id="collapseThree">
-                        <thead>
-                        <th>STT</th>
-                        <th>Vi phạm</th>
-                        <th>Điểm trừ</th>
-                        <th>Hành động</th>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>
-                                Đi lại lộn xộn, làm việc riêng, ăn quà
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>
-                                Mỗi ĐVTN không hát quốc ca, tập trung muộn
-                            </td>
-                            <td>0.2</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>
-                                Mở cửa lớp muộn
-                            </td>
-                            <td>1</td>
-                            <td><span>
-                                <a href="#" title="Sửa" class="mx-2">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                </a>
-                                <a href="#" title="Xóa" class="mx-2">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
-                            </span></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
 
             </tbody>
         </table>
