--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -997,8 +997,6 @@ fieldset .note {
 .panel-collapse {
     margin: 0 auto;
     padding: 0!important;
-    background-color: #fafafad4;
-    border: 1px solid #e3e3e3;
 }
 
 .rotate {
@@ -1011,4 +1009,13 @@ fieldset .note {
 
 .panel-collapse table.show {
     display: table !important;
+}
+.panel-collapse:hover{
+    background: #FFFFFF;
+}
+.panel-collapse table {
+    width: 80%;
+    margin: auto;
+    background-color: rgba(250, 250, 250, 0.83);
+    border: 1px solid rgb(227, 227, 227);
 }
